# VAJRA-1.0

./: .gitignore  README.md
.github/workflows/: ci.yml
results/: iperf3_baseline_20260301_135625.json
scripts/: run_benchmark.sh  setup_and_deploy.sh
vajra/: Cargo.toml
vajra/scripts/: hw_verify.sh
vajra/vajra-bench/: Cargo.toml
vajra/vajra-bench/benches/: canary.rs  full_stack.rs  primitives.rs  ratchet.rs  shamir.rs
vajra/vajra-bench/src/: lib.rs
vajra/vajra-cli/: Cargo.toml
vajra/vajra-cli/src/: main.rs  receiver.rs  sender.rs
vajra/vajra-commercial/: Cargo.toml
vajra/vajra-commercial/src/: lib.rs  tls_wrapper.rs
vajra/vajra-core/: Cargo.toml
vajra/vajra-core/src/: error.rs  lib.rs
vajra/vajra-core/src/crypto/: canary.rs  mod.rs  primitives.rs  ratchet.rs  shamir.rs
vajra/vajra-core/src/session/: handshake.rs  manager.rs  mod.rs
vajra/vajra-dashboard/: app.py  requirements.txt
vajra/vajra-dashboard/components/: canary_panel.py  ratchet_panel.py  shamir_panel.py
