[package]
name = "vajra-cli"
version = "0.1.0"
edition = "2021"
description = "VAJRA CLI for two-machine network testing"

[dependencies]
vajra-core = { path = "../vajra-core" }
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
rand = { version = "0.8", features = ["getrandom"] }
chrono = "0.4"
