[package]
name = "vajra-core"
version = "0.1.0"
edition = "2021"
description = "VAJRA quantum-safe multi-path secure transport - core library"

[dependencies]
# Cryptographic primitives
aes-gcm = { version = "0.10", features = ["aes"] }
hkdf = "0.12"
sha2 = "0.10"
hmac = "0.12"
rand = { version = "0.8", features = ["getrandom"] }
subtle = "2.5"
zeroize = { version = "1.7", features = ["derive"] }

# Post-quantum KEM
pqc_kyber = { version = "0.7", features = ["kyber768", "std"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# Concurrency
crossbeam-channel = "0.5"
rayon = "1.8"

# Error handling
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.3"

[features]
default = []
sovereign = []
